--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,3 +20,15 @@ body {
   margin-top: 30px;
   margin-bottom: 15px;
 }
+li {
+  cursor: pointer;
+  font-size: 20px;
+}
+.actions-container {
+  margin-right: -20px;
+}
+.todo-icon {
+  max-height: 30px;
+  max-width: 30px;
+  margin: 3px;
+}
